--- a/public/style.css
+++ b/public/style.css
@@ -44,11 +44,34 @@ li {
 
 
 /*메모리스트*/
+.memo-content {
+    white-space: pre-wrap; /* 줄바꿈, 공백 모두 반영됨 */
+}
+
+.memo-item {
+    background-color: #fffc8c;
+    margin-top: 20px;
+    padding: 12px;
+    text-align: left;
+}
+
+.memo-item:first-child {
+    margin-top: 0;
+}
+
 .memo-item .container-btn {
     display: flex;
+    justify-content: flex-end;
     gap: 10px;
     margin-top: 15px;
     
+}
+
+.memo-item .container-btn button {
+    width: 60px;
+    height: 40px;
+    padding: 5px 10px;
+    box-sizing: border-box;
 }
 
 
